[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/zoomy/Zoom Level.gd" type="Script" id=1]
[ext_resource path="res://addons/zoomy/icon_mouse.svg" type="Texture" id=2]
[ext_resource path="res://addons/zoomy/icon_zoom.svg" type="Texture" id=3]

[node name="Status Bar" type="HBoxContainer"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 16 )
hint_tooltip = "Zoom Level"
mouse_filter = 2
size_flags_vertical = 4
custom_constants/separation = 2
alignment = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="TextureRectMouse" type="TextureRect" parent="."]
margin_left = 885.0
margin_right = 901.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="posSnap" type="Label" parent="."]
margin_left = 903.0
margin_right = 935.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
mouse_filter = 0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="pos" type="Label" parent="posSnap"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
text = "(0,0)"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect3" type="ReferenceRect" parent="posSnap"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Spacer" type="Control" parent="."]
margin_left = 937.0
margin_right = 941.0
margin_bottom = 20.0
rect_min_size = Vector2( 4, 16 )

[node name="TextureRectZoom" type="TextureRect" parent="."]
margin_left = 943.0
margin_right = 959.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="ReferenceRect3" type="ReferenceRect" parent="TextureRectZoom"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ZSnap" type="Label" parent="."]
visible = false
margin_left = 923.0
margin_top = 3.0
margin_right = 959.0
margin_bottom = 17.0
rect_min_size = Vector2( 36, 0 )

[node name="Z" type="Label" parent="ZSnap"]
size_flags_horizontal = 4
text = "100%"
clip_text = true

[node name="ReferenceRect" type="ReferenceRect" parent="ZSnap/Z"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ZoomLevel" type="OptionButton" parent="."]
margin_left = 961.0
margin_right = 1018.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -798, 207 )
text = "50%"
items = [ "50%", null, false, 0, null, "100%", null, false, 1, null, "200%", null, false, 2, null, "400%", null, false, 3, null ]
selected = 0

[node name="Spacer2" type="Control" parent="."]
margin_left = 1020.0
margin_right = 1024.0
margin_bottom = 20.0
rect_min_size = Vector2( 4, 16 )

[connection signal="item_selected" from="ZoomLevel" to="." method="_on_ZoomLevel_item_selected"]
[connection signal="pressed" from="ZoomLevel" to="." method="_on_ZoomLevel_pressed"]
